meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/mar/snapshots/memfaultd__mar__clean__test__removes_mar_entry_exceeding_max_age.snap
---
source: memfaultd/src/mar/clean.rs
expression: metrics_service.take_metrics().unwrap()
---
{
  "MemfaultSdkMetric_mar_clean_duration_seconds": "<duration>",
  "MemfaultSdkMetric_mar_clean_duration_seconds_max": "<duration>",
  "MemfaultSdkMetric_mar_clean_duration_seconds_min": "<duration>",
  "MemfaultSdkMetric_mar_entries_deleted": 1.0,
  "MemfaultSdkMetric_mar_entry_count": 2.0,
  "MemfaultSdkMetric_mar_entry_count_max": 2.0,
  "MemfaultSdkMetric_mar_entry_count_min": 2.0
}
